objects/pse__Timecard__c.object
<CustomObject>
    <customHelpPage>pse__TimecardSplitHelp</customHelpPage>
    <description>Represents a whole timecard or part of a timecard. FinancialForce PSA creates timecard splits when a timecard spans the boundary of a time period, allowing you to bill for part of a timecard. Submission, approval, and inclusion in financials occur on the timecard, but subsequent billing and invoicing are associated with child timecard splits. Note the object name, Timecard, and API name, pse__Timecard__c. Timecards (pse__Timecard_Header__c) have a master-detail relationship with timecard splits.</description>
    <fields>
        <fullName>pse__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked when the Timecard Split is approved, which should be based on whether its parent Timecard is approved.</description>
        <inlineHelpText>This checkbox should be checked when the Timecard Split is approved, which should be based on whether its parent Timecard is approved.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approved_for_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the timecard split is approved for billing. This field must be checked prior to Billing Generation.</inlineHelpText>
        <label>Approved for Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approved_for_Vendor_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether it&apos;s OK to send an invoice to a vendor when invoicing costs for external resources.</inlineHelpText>
        <label>Approved for Vendor Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Assignment Name to which the timecard split belongs.</inlineHelpText>
        <label>Assignment</label>
        <referenceTo>pse__Assignment__c</referenceTo>
        <relationshipLabel>Timecard Splits</relationshipLabel>
        <relationshipName>TimecardSplits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Bill_Date__c</fullName>
        <inlineHelpText>The date the timecard split was charged to the project or customer.</inlineHelpText>
        <label>Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Bill_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Transaction ID for the billing event related to the timecard split.</inlineHelpText>
        <label>Bill Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Timecard Split (Bill Transaction)</relationshipLabel>
        <relationshipName>Bill_Tx_Timecard_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Billable__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates whether the timecard split hours can be charged to a customer.</inlineHelpText>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the timecard split has been charged to the project or customer.</inlineHelpText>
        <label>Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Invoiced__c</fullName>
        <description>Reflects Invoiced flag value on Billing Event Item&apos;s parent Billing Event</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),$Label.pse__common_label_n_a,IF(pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Invoiced__c,$Label.pse__common_label_yes,$Label.pse__common_label_no))</formula>
        <inlineHelpText>Indicates whether the customer has been invoiced for the billable amount on the timecard split.</inlineHelpText>
        <label>Billing Event Invoiced</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Unique ID of the billing event item associated with the timecard split.</inlineHelpText>
        <label>Billing Event Item</label>
        <referenceTo>pse__Billing_Event_Item__c</referenceTo>
        <relationshipLabel>Timecard Splits</relationshipLabel>
        <relationshipName>Timecard_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Released__c</fullName>
        <description>Reflects Released flag value on Billing Event Item&apos;s parent Billing Event</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),$Label.pse__common_label_n_a,IF(pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Is_Released__c,$Label.pse__common_label_yes,$Label.pse__common_label_no))</formula>
        <inlineHelpText>Indicates whether the billing event associated with the timecard split has been released.</inlineHelpText>
        <label>Billing Event Released</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Status__c</fullName>
        <description>Status pick list value on Billing Event Item&apos;s parent Billing Event</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),&apos;&apos;,TEXT(pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Status__c))</formula>
        <inlineHelpText>Status of the billing event associated with the timecard split.</inlineHelpText>
        <label>Billing Event Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event__c</fullName>
        <description>Formula hyperlink to the Billing Event (parent record to the Bill Event Item) if any.</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),&apos;&apos;,HYPERLINK(&apos;/&apos;&amp;pse__Billing_Event_Item__r.pse__Billing_Event__c, IF(OR(ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__r.Name),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__r.Name)),pse__Billing_Event_Item__r.pse__Billing_Event__c,(pse__Billing_Event_Item__r.pse__Billing_Event__r.Name))))</formula>
        <inlineHelpText>Unique ID of the billing event associated with the timecard split.</inlineHelpText>
        <label>Billing Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this item cannot be billed</description>
        <inlineHelpText>Indicates whether billing for the timecard split is on hold. When selected, the timecard split cannot be billed and is not included when generating billing events.</inlineHelpText>
        <label>Billing Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate_Currency_Code__c</fullName>
        <formula>pse__Timecard_Header__r.pse__Cost_Rate_Currency_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Currency used to calculate the resource cost for the timecard split. This is used when your organization uses multiple currencies.</inlineHelpText>
        <label>Cost Rate Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate_Exchange_Rate__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Cost Rate Exchange Rate, relative to Corporate Currency, calculated on End Date of Timecard Split</description>
        <inlineHelpText>Cost Rate Exchange Rate, relative to Corporate Currency, calculated on End Date of Timecard Split</inlineHelpText>
        <label>Cost Rate Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Transaction ID for the cost associated with the timecard split.</inlineHelpText>
        <label>Cost Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Timecard Split (Cost Transaction)</relationshipLabel>
        <relationshipName>CostForTimecardSplits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Eligible_for_Billing__c</fullName>
        <description>Indicates Timecard Split is in a state that is eligible for Billing Event Generation (not including the Approved for Billing flag, which may also be required per global config).

This means all of the following conditions must be met:
Billing Hold = false
Exclude from Billing = false
Include In Financials = true
Billable = true
Billed = false
Invoiced = false
Billing Event Item = {blank}
Project = {not blank}
Project&apos;s Account = {not blank}
Project Exclude From Billing = false</description>
        <formula>IF(AND(NOT(pse__Billing_Hold__c),NOT(pse__Exclude_from_Billing__c),pse__Include_In_Financials__c,pse__Billable__c,NOT(pse__Billed__c),NOT(pse__Invoiced__c),OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c)),NOT(OR(ISNULL(pse__Project__c),ISBLANK(pse__Project__c))),NOT(OR(ISNULL(pse__Project__r.pse__Account__c),ISBLANK(pse__Project__r.pse__Account__c))),NOT(pse__Project__r.pse__Exclude_From_Billing__c)),$Label.pse__common_label_yes,$Label.pse__common_label_no)</formula>
        <inlineHelpText>Indicates Timecard Split is in a state that is eligible for Billing Event Generation (not including the Approved for Billing flag, which may also be required per global config).</inlineHelpText>
        <label>Eligible for Billing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <inlineHelpText>End date for the week that the timecard split covers.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Est_Vs_Actuals__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>OBSOLETE FIELD</description>
        <inlineHelpText>OBSOLETE FIELD</inlineHelpText>
        <label>Est Vs Actuals</label>
        <referenceTo>pse__Est_Vs_Actuals__c</referenceTo>
        <relationshipLabel>Timecard Splits</relationshipLabel>
        <relationshipName>Timecard_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Estimated_Time_To_Completion__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Estimated Time To Completion</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, never bill this business record.  Same effect as Billing Hold, but intended to reflect a permanent exclusion from Billing Generation.</description>
        <inlineHelpText>If checked, never bill this business record.  Same effect as Billing Hold, but intended to reflect a permanent exclusion from Billing Generation.</inlineHelpText>
        <label>Exclude from Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__External_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the resource is an employee of the company or an external contractor. Select this option to roll-up the timecard split hours into Billable Hours External.</inlineHelpText>
        <label>External Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Friday_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Friday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Friday_Notes__c</fullName>
        <label>Friday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Include_In_Financials__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the timecard split is to be included in the financial roll-ups to the project and RPGs.</inlineHelpText>
        <label>Include In Financials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Invoice_Date__c</fullName>
        <inlineHelpText>Date the invoice was created.</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Invoice_Number__c</fullName>
        <inlineHelpText>Invoice number for the invoice associated with the timecard split.</inlineHelpText>
        <label>Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Invoice_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Transaction ID for the invoice related to the timecard split.</inlineHelpText>
        <label>Invoice Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Timecard Split (Invoice Transaction)</relationshipLabel>
        <relationshipName>Invoice_Tx_Timecard_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the customer has been invoiced.</inlineHelpText>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Location_Fri__c</fullName>
        <label>Location - Fri</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANZAC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DISTRICT OF COLUMBIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>FEDERATED STATES OF MICRONESIA</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Location_Mon__c</fullName>
        <label>Location - Mon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANZAC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DISTRICT OF COLUMBIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>FEDERATED STATES OF MICRONESIA</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Location_Sat__c</fullName>
        <label>Location - Sat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANZAC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DISTRICT OF COLUMBIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>FEDERATED STATES OF MICRONESIA</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Location_Sun__c</fullName>
        <label>Location - Sun</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANZAC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DISTRICT OF COLUMBIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>FEDERATED STATES OF MICRONESIA</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Location_Thu__c</fullName>
        <label>Location - Thu</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANZAC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DISTRICT OF COLUMBIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>FEDERATED STATES OF MICRONESIA</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Location_Tue__c</fullName>
        <label>Location - Tue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANZAC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DISTRICT OF COLUMBIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>FEDERATED STATES OF MICRONESIA</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>